2.5.7a6
-------

 - New **general** parameters: "plot summary histogram" and "summary histogram dpi".
 - Fix several warnings and errors.
 - Fix incorrect results with NumPy 2+ (fix slightly changes AA_stat results).


2.5.6
-----

 - Fix #13 and a couple of issues with HTML report generation.
 - Updated the following version requirements:

   | Dependency | Required version |
   | -----------|----------------- |
   | Python     | >=3.8            |
   | Pyteomics  | >4.6             |
   | Pandas     | >=1.4            |
   | Jinja2     | >=3.1.2          |


2.5.5
-----

 - Reduce memory usage.
 - Fix errors with CSV files. Add new parameters --fmods, --vmods and --enzyme to make up for metadata that was
   extracted from pepXML. Also new sections in config file can be used for the same purpose:
   _modifications, configured fixed modifications_ and _modifications, configured variable modifications_.
 - Add CLI argument --processes to control the maximum number of processes used.


2.5.4
-----

 - Fix error message when no input files are found.
 - Fix FutureWarrnings in HTML report generation.
 - Fix error with DBSCAN min_samples parameter being float instead of int.


2.5.3
-----

 - Fix a bug in `same_residue` which resulted in a KeyError when recalculating recommended modifications.


2.5.2
-----

- Fix the issue that clustering results were saved in the wrong directory.
- Fix number formatting in HTML report.


2.5
---

- Add buttons to load, edit and save AA_stat parameters.
- Add `--create-shortcut` option for `AA_stat_GUI`.
- Refine GUI text, add tooltips.

2.4
---

Add a simple GUI based on Tkinter. Start it by running `AA_stat_GUI`.


2.3
---

- Fix error on Windows.
- Fix for MSFragger 3.2.
- Better support for terminal and protein-terminal variable modifications in input.
- By default, support both "DECOY_" and "rev_" decoy prefixes.
- Improve error messaging on data reading.
- Support whole directories instead of file lists on command line.