@@ -4,6 +4,7 @@
  - New **general** parameters: "plot summary histogram" and "summary histogram dpi".
  - Fix several warnings and errors.
  - Fix incorrect results with NumPy 2+ (fix slightly changes AA_stat results).
+ - Fix for Pyteomics 4.7.3+ (it is now required).
 
 
 2.5.6
